--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
         <p class="subtitle">LIMS Administrator & Database Specialist</p>
         <div class="cta-buttons">
             <a href="#contact" class="btn btn-primary">Get In Touch</a>
-            <a href="#" class="btn btn-secondary">Download Resume</a>
+            <a href="./Scott_Ingram_Resume_2025.pdf" class="btn btn-secondary" download>Download Resume</a>
         </div>
     </section>
 
