--- a/index.html
+++ b/index.html
@@ -567,12 +567,12 @@
                 <span class="stat-label">Years Experience</span>
             </div>
             <div class="stat-item">
-                <span class="stat-number">100%</span>
-                <span class="stat-label">Safety Record</span>
+                <span class="stat-number">400+</span>
+                <span class="stat-label">LabWare Users</span>
             </div>
             <div class="stat-item">
-                <span class="stat-number">Multi</span>
-                <span class="stat-label">Disciplinary</span>
+                <span class="stat-number">100%</span>
+                <span class="stat-label">Safety Record</span>
             </div>
             <div class="stat-item">
                 <span class="stat-number">MSHA</span>
